--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html> 
     <head>
 	    <title> Omega</title>
-	    <style type="text/css">
-	        body {
-	        	background: blue;
-	        }
+	    <link rel="stylesheet: href="styles/main.css">
 	</head>
 	
 	<body>
