--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html> 
     <head>
 	    <title> Omega</title>
-	    <link rel="stylesheet: href="styles/main.css">
+	    <link rel="stylesheet" href="styles/main.css">
 	</head>
-	
 	<body>
+	    
+	<header>
+	    <nav>
 		<h1>Omega</h1>
-
 		<ul>
 			 <li>Home</li>
-			 <li><a href="index.html">About</a></li>
-		</ul>
-
-	    <ul>
-		     <li>Steam Group <a href="https://goo.gl/Efrk22">Click Here to Join</a></li>
-		</ul>
-
-	</body>
+			 <li><a href="about.html">About</a></li>
+			 <li><a href="snake.html">Snake Game</a></li>
+		    </ul>
+		</nav>
+	</header>
+		<footer>©2018 Omega Team</footer>
 	    
 		
 	</html>
